tests/ui/parser/issues/issue-10636-1.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-10636-1.rs:1:12
   |
LL | struct Obj {
   |            ^ unclosed delimiter
...
LL | )
   | ^ mismatched closing delimiter

error: aborting due to 1 previous error

